@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-02T16:17:33Z",
+  "timestamp" : "2022-06-03T00:54:27Z",
   "count_outdated" : 312,
   "uniques_outdated" : 163,
-  "count" : 338,
+  "count" : 339,
   "uniques" : 182,
   "clones" : [
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-06-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
