@@ -1,5 +1,5 @@
 {
-  "count": 26,
+  "count": 27,
   "uniques": 12,
   "clones": [
     {
@@ -34,7 +34,7 @@
     },
     {
       "timestamp": "2022-06-02T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
